src/objects/Opportunity_Product__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Class_Geography__c</fullName>
        <label>Asset Class-Geography</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assets__c</fullName>
        <label>Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>LineDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Drop_Reason__c</fullName>
        <label>Drop Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Consulting Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Assets__c</fullName>
        <label>Projected Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_NIR__c</fullName>
        <label>Projected NIR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Structure__c</fullName>
        <label>Fee Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_First_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is First Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LastModifiedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>ListPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Waiver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Minimum Waiver</label>
        <referenceTo>Minimum_Waiver__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NIR__c</fullName>
        <label>Projected NIR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Time_Fees__c</fullName>
        <label>One Time Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Probability</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PriceBook_BUId__c</fullName>
        <label>PriceBook_BUId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Vehicle__c</fullName>
        <label>Vehicle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projected_Annualized_Revenue__c</fullName>
        <label>Projected Annualized Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <label>RFP</label>
        <referenceTo>PMAPS__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Share_Class__c</fullName>
        <label>Share Class</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R6</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>